compile_tests/expected/assignment.stderr
error[E0308]: mismatched types
  --> compile_tests/src/assignment.rs:7:21
   |
7  |         i32_value = 1.;
   |                     ^^
   |                     |
   |                     expected integer, found floating-point number
   |                     arguments to this function are incorrect
   |
note: associated function defined here
  --> ./crates/ragna/src/values.rs:31:18
   |
31 |     pub const fn constant(value: T) -> Self
   |                  ^^^^^^^^
